--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,111 +1,307 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+
     xmlns:tools="http://schemas.android.com/tools"
+
     package="com.example.sippure">
 
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-permission android:name="android.permission.MANAGE_MEDIA" />
+
+
+
     <application
-        tools:replace="android:fullBackupContent"
+
         android:allowBackup="true"
+
         android:dataExtractionRules="@xml/data_extraction_rules"
+
         android:fullBackupContent="@xml/backup_rules"
+
         android:icon="@mipmap/ic_launcher"
+
         android:label="@string/app_name"
+
         android:roundIcon="@mipmap/ic_launcher_round"
+
         android:supportsRtl="true"
+
         android:theme="@style/Theme.Sippure"
+
+        tools:replace="android:fullBackupContent"
+
         tools:targetApi="31">
+
         <activity
+
+            android:name=".view.TeadetailActivity"
+
+            android:exported="true"
+
+            android:label="@string/title_activity_teadetail"
+
+            android:theme="@style/Theme.Sippure">
+
+            <intent-filter>
+
+                <action android:name="android.intent.action.MAIN" />
+
+
+
+                <category android:name="android.intent.category.LAUNCHER" />
+
+            </intent-filter>
+
+        </activity>
+
+        <activity
+
+            android:name=".view.ProfileActivity"
+
+            android:exported="true"
+
+            android:label="@string/title_activity_profile"
+
+            android:theme="@style/Theme.Sippure">
+
+            <intent-filter>
+
+                <action android:name="android.intent.action.MAIN" />
+
+
+
+                <category android:name="android.intent.category.LAUNCHER" />
+
+            </intent-filter>
+
+        </activity>
+
+        <activity
+
+            android:name=".view.SearchActivity"
+
+            android:exported="true"
+
+            android:label="@string/title_activity_search"
+
+            android:theme="@style/Theme.Sippure">
+
+            <intent-filter>
+
+                <action android:name="android.intent.action.MAIN" />
+
+
+
+                <category android:name="android.intent.category.LAUNCHER" />
+
+            </intent-filter>
+
+        </activity>
+
+        <activity
+
+            android:name=".view.FavouriteActivity"
+
+            android:exported="true"
+
+            android:label="@string/title_activity_favourite"
+
+            android:theme="@style/Theme.Sippure">
+
+            <intent-filter>
+
+                <action android:name="android.intent.action.MAIN" />
+
+
+
+                <category android:name="android.intent.category.LAUNCHER" />
+
+            </intent-filter>
+
+        </activity>
+
+        <activity
+
             android:name=".view.UpdateProductActivity"
+
             android:exported="true"
+
             android:label="@string/title_activity_update_product"
+
             android:theme="@style/Theme.Sippure">
+
             <intent-filter>
+
                 <action android:name="android.intent.action.MAIN" />
 
+
+
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
+
         </activity>
+
         <activity
+
             android:name=".view.AddProductActivity"
+
             android:exported="true"
+
             android:label="@string/title_activity_add_product"
+
             android:theme="@style/Theme.Sippure">
+
             <intent-filter>
+
                 <action android:name="android.intent.action.MAIN" />
 
+
+
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
+
         </activity>
+
         <activity
+
             android:name=".view.SplashActivity"
+
             android:exported="true"
+
             android:label="SplashActivity"
+
             android:theme="@style/Theme.Sippure">
+
             <intent-filter>
+
                 <action android:name="android.intent.action.MAIN" />
 
+
+
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
+
         </activity>
+
         <activity
+
             android:name=".view.LoginActivity"
+
             android:exported="true"
+
             android:label="LoginActivity"
+
             android:theme="@style/Theme.Sippure">
+
             <intent-filter>
+
                 <action android:name="android.intent.action.MAIN" />
 
+
+
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
+
         </activity>
+
         <activity
+
             android:name=".view.RegistrationActivity"
+
             android:exported="true"
+
             android:label="RegistrationActivity"
+
             android:theme="@style/Theme.Sippure">
+
             <intent-filter>
+
                 <action android:name="android.intent.action.MAIN" />
 
+
+
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
+
         </activity>
+
         <activity
+
             android:name=".view.DashboardActivity"
+
             android:exported="true"
+
             android:label="DashboardActivity"
+
             android:theme="@style/Theme.Sippure">
+
             <intent-filter>
+
                 <action android:name="android.intent.action.MAIN" />
 
+
+
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
+
         </activity>
+
         <activity
+
             android:name=".view.NavigationActivity"
+
             android:exported="true"
+
             android:label="NavigationActivity"
+
             android:theme="@style/Theme.Sippure">
+
             <intent-filter>
+
                 <action android:name="android.intent.action.MAIN" />
 
+
+
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
+
         </activity>
+
         <activity
+
             android:name=".view.ForgetPasswordActivity"
+
             android:exported="true"
+
             android:label="ForgetPasswordActivity"
+
             android:theme="@style/Theme.Sippure">
+
             <intent-filter>
+
                 <action android:name="android.intent.action.MAIN" />
 
+
+
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
+
         </activity>
 
     </application>
+
+
 
 </manifest>
