--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.example.sippure">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.MANAGE_MEDIA" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
     <application
         android:allowBackup="true"
@@ -17,83 +17,8 @@
         android:theme="@style/Theme.Sippure"
         tools:replace="android:fullBackupContent"
         tools:targetApi="31">
-        <activity
-            android:name=".view.CheckoutActivity"
-            android:exported="true"
-            android:label="@string/title_activity_checkout"
-            android:theme="@style/Theme.Sippure">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".view.ProductDetailActivity"
-            android:exported="true"
-            android:label="@string/title_activity_product_detail"
-            android:theme="@style/Theme.Sippure">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".view.ProfileActivity"
-            android:exported="true"
-            android:label="@string/title_activity_profile"
-            android:theme="@style/Theme.Sippure">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".view.SearchActivity"
-            android:exported="true"
-            android:label="@string/title_activity_search"
-            android:theme="@style/Theme.Sippure">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".view.FavouriteActivity"
-            android:exported="true"
-            android:label="@string/title_activity_favourite"
-            android:theme="@style/Theme.Sippure">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".view.UpdateProductActivity"
-            android:exported="true"
-            android:label="@string/title_activity_update_product"
-            android:theme="@style/Theme.Sippure">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".view.AddProductActivity"
-            android:exported="true"
-            android:label="@string/title_activity_add_product"
-            android:theme="@style/Theme.Sippure">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <!-- Only SplashActivity has the LAUNCHER intent -->
         <activity
             android:name=".view.SplashActivity"
             android:exported="true"
@@ -101,65 +26,80 @@
             android:theme="@style/Theme.Sippure">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".view.CheckoutActivity"
+            android:exported="true"
+            android:label="@string/title_activity_checkout"
+            android:theme="@style/Theme.Sippure" />
+
+        <activity
+            android:name=".view.ProductDetailActivity"
+            android:exported="true"
+            android:label="@string/title_activity_product_detail"
+            android:theme="@style/Theme.Sippure" />
+
+        <activity
+            android:name=".view.ProfileActivity"
+            android:exported="true"
+            android:label="@string/title_activity_profile"
+            android:theme="@style/Theme.Sippure" />
+
+        <activity
+            android:name=".view.SearchActivity"
+            android:exported="true"
+            android:label="@string/title_activity_search"
+            android:theme="@style/Theme.Sippure" />
+
+        <activity
+            android:name=".view.FavouriteActivity"
+            android:exported="true"
+            android:label="@string/title_activity_favourite"
+            android:theme="@style/Theme.Sippure" />
+
+        <activity
+            android:name=".view.UpdateProductActivity"
+            android:exported="true"
+            android:label="@string/title_activity_update_product"
+            android:theme="@style/Theme.Sippure" />
+
+        <activity
+            android:name=".view.AddProductActivity"
+            android:exported="true"
+            android:label="@string/title_activity_add_product"
+            android:theme="@style/Theme.Sippure" />
+
         <activity
             android:name=".view.LoginActivity"
             android:exported="true"
             android:label="LoginActivity"
-            android:theme="@style/Theme.Sippure">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:theme="@style/Theme.Sippure" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".view.RegistrationActivity"
             android:exported="true"
             android:label="RegistrationActivity"
-            android:theme="@style/Theme.Sippure">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:theme="@style/Theme.Sippure" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".view.DashboardActivity"
             android:exported="true"
             android:label="DashboardActivity"
-            android:theme="@style/Theme.Sippure">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:theme="@style/Theme.Sippure" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".view.NavigationActivity"
             android:exported="true"
             android:label="NavigationActivity"
-            android:theme="@style/Theme.Sippure">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:theme="@style/Theme.Sippure" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".view.ForgetPasswordActivity"
             android:exported="true"
             android:label="ForgetPasswordActivity"
-            android:theme="@style/Theme.Sippure">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/Theme.Sippure" />
     </application>
-
 </manifest>
